08-Ingress/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-api
  template:
    metadata:
      labels:
        app: my-api
    spec:
      containers:
      - name: my-api
        image: hashicorp/http-echo
        args: ["-text='Hello from API'"]
        ports:
        - containerPort: 5678
